Bug 996890 - [Home2] Ensure icons are not overlapped when Rocketbar is expanded

--- a/dev_apps/home2/style/css/app.css
+++ b/dev_apps/home2/style/css/app.css
@@ -8,6 +8,10 @@ html, body, .icons {
   margin: 0;
 }
 
+.rb-enabled #icons {
+  padding-top: 5.5rem;
+}
+
 .icons {
   overflow-y: scroll;
   overflow-x: hidden;
